<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity"
    android:weightSum="101"
    android:orientation="vertical" 
    android:background="@android:color/black">

    <TextView
        style="@style/HeaderText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:gravity="center"
        android:text="@string/app_title" />
    
    <Button
        style="@style/BaseText"
        android:id="@+id/mPlaylistBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:text="@string/select_playlist_caption"/>"
    
    <Button
        style="@style/BaseText"
        android:id="@+id/mPaceBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:text="@string/set_pace_caption"/>
    
    <Button
        style="@style/BaseText"
        android:id="@+id/mStartBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:text="@string/start_caption"/>
    
    <Button
        style="@style/BaseText"
        android:id="@+id/mExitBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:text="@string/exit_caption"/>
	    
</LinearLayout>
